# routes/api.php
@@ -46,5 +46,7 @@ Route::prefix('/v1')->namespace('Api\V1')->middleware('auth:sanctum')->group(fun
     Route::post('save_product_comment',[\App\Http\Controllers\Api\V1\ProductsApiController::class, 'saveComment']);
 
     Route::post('payment',[\App\Http\Controllers\Api\V1\PaymentApiController::class, 'payment'])->name('payment');
+    Route::post('profile',[\App\Http\Controllers\Api\V1\UserApiController::class, 'profile'])->name('profile');
+    Route::post('received_orders',[\App\Http\Controllers\Api\V1\UserApiController::class, 'receivedOrders'])->name('receivedOrders');
 
 });
